# dotfiles

./: .bashrc  .dockerignore  .gitconfig  .gitignore  .jjconfig.toml  .sops.yaml  .tmux.conf  AGENTS.md  aerospace.toml  dockerfunc  gh-app-routes.gitconfig  install.sh  jj-allowed-signers  mise.toml  oh-my-opencode.full.json  oh-my-opencode.json  oh-my-opencode.minimal.json  opencode.json  proxy.sh  secrets.env  secrets.human.env  starship.toml  sync-repos.json
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
devbox/: install.sh  pcscd-bridge.service
devpod/: AGENTS.md  Dockerfile  config.toml  entrypoint.sh
docs/: claude-code-workflow-guide.md
envoy/: AGENTS.md  Pulumi.prod.yaml  Pulumi.yaml  README.md  images.ts  index.ts  machines.ts  package-lock.json  package.json  services.ts  watchdog.ts
ghostty/: config
installers/: AGENTS.md  claude.sh  ghostty.sh  jj.sh  lib.sh  mise.sh  nvim.sh  opencode.sh  pam-u2f.sh  shell.sh  sops.sh  tmux.sh  tt.sh  voxtype.sh  whatsapp.sh
laptop/: 99-webcam-format.rules  aerospace-ws  aerospace-ws.conf  cosmic-comp-fork.sh  cosmic-greeter-fork.sh  devbox  drivers.sh  generate-shortcuts  hardening.sh  install.sh  joycon.sh  pam-u2f.sh  shortcuts-custom  ssh-config  sysctl-performance.conf  test-generate-shortcuts  usbguard-rules.conf  usbguard.md  workspaces.conf
mise/: mise.conf
nvim/: init.lua
opencode/: AGENTS.md  oh-my-openagent.full.json  opencode.json  (+3 more)
opencode-web/: Caddyfile  README.md  deploy-web  opencode-web-serve  opencode-web.service
scripts/devenv-backup/: devenv.py  pyproject.toml
(+273 files in other folders)
